# Cpp-Robot

./: .gitignore  NetworksRobot.sln  README.md  README.txt
NetworksRobot/: CMakeLists.txt  MySocket.cpp  MySocket.h  NetworksRobot.vcxproj  NetworksRobot.vcxproj.filters  PktDef.cpp  PktDef.h  main.cpp
NetworksRobot/public/: robot_control_gui.html
NetworksRobotTESTING/: NetworksRobotTESTING.cpp  NetworksRobotTESTING.vcxproj  NetworksRobotTESTING.vcxproj.filters
include/: PkDef.h
src/: PktDef.cpp
